--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,6 +18,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.8.4",
     "i": "^0.3.7",
+    "notistack": "^3.0.2",
     "Npm": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
