--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,15 +14,20 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.1.0",
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.8.4",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "i": "^0.3.7",
+    "js-cookie": "^3.0.5",
     "notistack": "^3.0.2",
     "Npm": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
